# Custom-Skills

./: .gitignore  agent-issues.md  bug.md  challenges.md  docker.md  package-lock.json
.claude/skills/apache-kafka/: SKILL.md
.claude/skills/apache-kafka/references/: anti-patterns.md  core-patterns.md  deployment-monitoring.md  microservices-patterns.md  producer-consumer.md  security-operations.md  streams-connect.md
.claude/skills/apache-kafka/scripts/: kafka_mcp_server.py  scaffold_kafka.py
.claude/skills/authorizer/: SKILL.md
.claude/skills/authorizer/assets/: audit_policy.yaml  cert_manager_issuers.yaml  cloud_workload_identity.yaml  kyverno_policies.yaml  rbac_base.yaml
.claude/skills/authorizer/references/: anti-patterns.md  audit-compliance.md  cloud-auth-patterns.md  environment-tiers.md  identity-types.md  multi-cluster-auth.md  policy-engines.md  rbac-patterns.md  (+1 more)
.claude/skills/cicd-pipeline/: SKILL.md
.claude/skills/dapr-mastery/: SKILL.md
.claude/skills/docker-mastery/: SKILL.md
.claude/skills/fastapi-forge/: SKILL.md
.claude/skills/hybrid-sdk-agents/: SKILL.md
.claude/skills/k8s-mastery/: SKILL.md
.claude/skills/mcp-skills/: SKILL.md
.claude/skills/multicloud-deploy/: SKILL.md
.claude/skills/obs-cost-traffic/: SKILL.md
.claude/skills/security-production/: SKILL.md
mcp-server-docker/: .dockerignore  .env.example  Dockerfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
mcp-server-docker/src/: server.py
specs/: create_k8s_doc.js  fastapi-forge-spec.md  k8s-mastery-skill-documentation.docx  k8s.md
(+218 files in other folders)
