[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server with Redis caching — containerized"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "redis[hiredis]>=5.0",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100
